# podcast_creator

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_daily_daemon.ps1  server.js
data/: sample_article.html  scheduler_state.json
data/rss/: podcast.xml
src/: filters.json
src/knigovishte_podcast/: cli.py  config.py  models.py  pipeline.py  serve_with_flask.py  web.py
src/knigovishte_podcast/services/: __init__.py  article_selector.py  dedup.py  fetcher.py  rss.py  scheduler.py  script_builder.py  translator.py  tts.py
tests/: test_article_selector.py  test_cli.py  test_config.py  test_dedup.py  test_fetcher.py  test_pipeline.py  test_rss.py  test_scheduler.py  test_script_builder.py  test_translator.py  test_tts.py  test_web.py
tests/_artifacts/test_post_reports_existing_audio_for_duplicate_article/data/rss/: podcast.xml
tools/: regen_podcast.py
