[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knigovishte-podcast"
version = "0.1.0"
description = "Local-first scaffold for turning Knigovishte articles into bilingual podcast episodes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "google-cloud-texttospeech>=2.31",
    "imageio-ffmpeg>=0.6",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "mypy>=1.18",
    "ruff>=0.11",
]

[project.scripts]
knigovishte-podcast = "knigovishte_podcast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["build", "dist", "src/knigovishte_podcast.egg-info"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
files = ["main.py", "src"]
pretty = true

[[tool.mypy.overrides]]
module = ["google.*", "pyttsx3", "requests", "imageio_ffmpeg"]
ignore_missing_imports = true
